chore: update .gitignore and tsconfig.json
- Update .gitigore
- Update tsconfig.js
- Fix src/indes.ts exports

Signed-off-by: Héctor Olvera Vital <hector.olvera@ciencias.unam.mx>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
-    "removeComments": false,
+    "removeComments": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
