--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "exit 0",
+    "test": "jest",
     "build": "tsc"
   },
   "repository": {
@@ -28,7 +28,11 @@
   },
   "devDependencies": {
     "@types/is-number": "^7.0.2",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   }
 }
